# agentforge

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  mcp_servers.yaml  orchestrator.py  orquestador.py  pyproject.toml  requirements.txt
agentes/agente_abogado/: config.yaml  prompt.yaml
agentes/agente_abogado/skills/: legal.yaml
agentes/agente_noticias/: config.yaml
agentes/agente_noticias/skills/: news.yaml
agentes/agente_tiempo/: config.yaml  prompt.yaml
agentes/agente_tiempo/skills/: weather.yaml
agentes/orquestador/: config.yaml
agentes/orquestador/skills/: router.yaml
agents/code_agent/: config.yaml  prompt.yaml
agents/code_agent/skills/: code.yaml
agents/lawyer_agent/: config.yaml
agents/lawyer_agent/skills/: legal.yaml
agents/news_agent/: config.yaml  prompt.yaml
agents/news_agent/mcps/: search.yaml  websearch_server.py
agents/news_agent/skills/: news.yaml
agents/orchestrator/: config.yaml  prompt.yaml
agents/orchestrator/skills/: router.yaml
agents/weather_agent/: config.yaml
agents/weather_agent/mcps/: weather.yaml
agents/weather_agent/skills/: weather.yaml
core/: __init__.py  agent_loader.py  errors.py  mcp_loader.py  prompt_builder.py  providers.py  runner.py  skills.py
tests/: conftest.py  test_agent_loader.py  test_errors.py  test_mcp_loader.py  test_prompt_builder.py  test_providers.py  test_skills.py
tui/: index.ts  package.json  tsconfig.json
