[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge"
version = "0.1.0"
description = "YAML-driven multi-agent orchestrator built on Google ADK"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "Francesc Castell"}]
keywords = ["agents", "orchestrator", "adk", "mcp", "llm", "multi-agent", "yaml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "google-adk>=2.5.0",
    "google-genai>=2.13.0",
    "litellm>=1.93.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]
weather = ["mcp_weather_server"]

[project.scripts]
agentforge = "core.runner:main"

[project.urls]
Homepage = "https://github.com/FranckyCastell/agentforge"
Repository = "https://github.com/FranckyCastell/agentforge"
Issues = "https://github.com/FranckyCastell/agentforge/issues"

[tool.setuptools]
packages = ["core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.pytest_asyncio]
mode = "auto"
